# avito-rag-contest

./: .gitignore  README.md  README_RU.md  answer.csv  main.ipynb  make_submission.py  pyproject.toml
avito_retrieval/: __init__.py  data.py  dense.py  embeddings.py  fusion.py  lexical.py  metrics.py
