[project]
name = "avito-bootcamp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
